2006-12-19  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* updated doc's

	* XXX solved circularity for flags == DF_NAMESPACE: 
	* new circularity scope.namespace_var
	* regrtest pass

2006-12-18  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* rebuild all.ast
	* cleaned comments: ``HT: XXX'' is consistently used for places
	  that need some fix

	* added hash sizes in scope ast nodes in ast_graph

2006-12-17  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* scope added in all asttool code
	* regression test run

2006-12-13  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* deleted old check-oast

	* use the new dynamic type checking to check scopes: Everything
	fine
	
2006-11-16  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* added Scope, ScopeKind serialization
	* new circularities: Scope.variables, Scope.typeTags; they
	required a bit of refactoring in the postpone_circularity code
	* new nullable Scope.parentScope, Scope.namespaceVar, 
	Scope.parameterizedEntity

2006-11-15  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* added has_negative_values in EnumType
	* added in compound_info: compound_scope, is_transparent_union, syntax

	* redesigned postpone_circular_* functions: they work on the
	reference now and don't take the field anymore

2006-11-14  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* added overload, virtuallyOverride, scope in Variable
	* new circularity Variable.overload

2006-11-10  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* asttools adopted 
	* regressions pass

2006-11-08  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* completed merge with changes from
	  smbase-484-ast-278-elkhound-1036-elsa-2439, a few issues are
	  delayed/ignored for a while, see TODO

2006-11-05  Hendrik Tews  <tews@localhost.localdomain>

	* elsa compiles + non-ocaml regression tests
	* new nullables:
		TranslationUnit.globalScope
		E_stringLit.fullTextNQ
	* regression tests pass!

2006-11-04  Hendrik Tews  <tews@localhost.localdomain>

	* smbase merged
	* ast merged
	* elkhound merged
	* started merge
