@@ -5,5 +5,5 @@
  *
  ***************************************************************************)
 
-open Heapcheck;;
+open Memcheck;;
 
