@@ -1,5 +1,7 @@
 2006-12-19  Hendrik Tews  <tews@tandem.cs.ru.nl>
 
+	* memcheck renaming
+
 	* updated doc's
 
 	* XXX solved circularity for flags == DF_NAMESPACE: 
